Update redirect URL in index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=https://script.google.com/macros/s/AKfycbxPTec7kX16_34XEZFKSyvPpwmsaX87fYJehYGsBO9DX9E7tlVfnEIXQrN1hUaUkYWE/exec">
+    <!-- Deploy: EVENTO-ECOSv02 -->
+    <meta http-equiv="refresh" content="0; url=https://script.google.com/macros/s/AKfycbx1rKHX59_9gapr4IlkyPxPVt7hz51aVdldQOnoJ8eAUJV7rY4U5XKAfkhydC4ZAAJ-/exec">
   </head>
   <body>
     <p>Redirigiendo...</p>
